package builder;

/**
 * 建造者模式--产品角色---房子
 */
public class House {
    private String color;
    private float heigh;

    public String getColor() {
        return color;
    }

    public void setColor(String color) {
        this.color = color;
    }

    public float getHeigh() {
        return heigh;
    }

    public void setHeigh(float heigh) {
        this.heigh = heigh;
    }
}
